--- a/game/themes/next/_config.yml
+++ b/game/themes/next/_config.yml
@@ -1,4 +1,5 @@
-# =============================================================== ========================= ATTENTION! ==========================
+# ===============================================================
+# ========================= ATTENTION! ==========================
 # ===============================================================
 # NexT repository is moving here: https://github.com/theme-next
 # ===============================================================
@@ -31,7 +32,7 @@ favicon:
   apple_touch_icon: /images/logo.jpg
 
 # Set default keywords (Use a comma to separate)
-keywords: "Gamer Miohitokiri"
+keywords: "Coder MiohitoKiri"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
@@ -354,7 +355,7 @@ font:
 
 # MathJax Support
 mathjax:
-  enable: true
+  enable: false
   per_page: false
   cdn: https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
@@ -829,7 +830,7 @@ google_site_verification: m9sOVJZxIJPa9f7LP6pLEnLhZjHBWpXH9gPv4Vh2vOM
 
 sitemap:
   path: sitemap.xml
-  url: https://miohitokiri5474.github.io/game
+  url: https://miohito5474.github.io/code
 
 reading_progress:
   enable: true
@@ -838,5 +839,3 @@ reading_progress:
 
 lazyload:
      enable: true
-
-google_analytics: UA-151767837-2
